--- a/01-wired-system/index.html
+++ b/01-wired-system/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>01-wired-system</title>
 </head>
 <body>
-
+    <h1>01-wired-system</h1>
 </body>
 </html>
